--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "react-1",
   "private": true,
   "version": "0.0.0",
+  "homepage":".",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
